<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContentProvider</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="content_provider_instance">内容提供者实例</string>
    <string name="runoob">www.runoob.com</string>
    <string name="image">image</string>
    <string name="name">姓名</string>
    <string name="grade">年级</string>
    <string name="add">添加</string>
    <string name="search">查询</string>

</resources>
